[package]
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
name = "nucleo-stm32g071rb"
edition = "2018"
version = "0.1.0"


[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.15"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32g0xx-hal = { version = "0.1.2", features = ["stm32g071", "rt"] }
embedded-hal = "0.2.5"
rotary-encoder-hal = "0.3.0"
manchester-code = "0.1.0"
# manchester-code = { git = "https://github.com/almedso/manchester-code.git", branch = "master" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-
